# splunk-soc-assist-agent

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  README.md  SPEC.md  architecture.mmd  pyproject.toml  spike.py
profiles/: example.toml
scripts/: load_sample.sh  provision.sh
src/soc_assist/: __init__.py  alert.py  audit.py  config.py  dashboard.py  demo_gate.py  gate.py  investigate.py  profile.py  prompts.py  run.py  slack_app.py  surface.py  write_tool.py
